# DeepSentinel

./: .gitignore  AttackRecallDHM.xlsx  AttackRecallDNN.xlsx  AttackRecallSVM.xlsx  LICENSE.md  List_of_attacks_Final.xlsx  Pipfile  README.md  auc.py  evaluate.py  paramsearch.sh  precision-recall-f.py  preprocess.py  realtime.py  recall-per-attack.py  roc.py  setup.cfg  svm-eval.py  svm-paramsearch.py  svm-train.py  tox.ini  train-model.py  training.py
.github/workflows/: test.yml
aaic/: swat-evaluate.sh  swat-svm.sh  swat-train-all.sh  swat-train-relu.sh  swat-train-sigmoid.sh  swat-train.sh
deep_sentinel/: utils.py
deep_sentinel/dataset/: __init__.py  normalize.py  utils.py
deep_sentinel/interfaces/: model.py
deep_sentinel/models/dnn/: __init__.py  wrapper.py
deep_sentinel/models/dnn/dataset/: __init__.py  constants.py  create.py  extract.py
deep_sentinel/models/dnn/model/: __init__.py  continuous.py  discrete.py  loss_calculator.py  model.py  utils.py
deep_sentinel/models/dnn/training/: __init__.py  evaluator.py  iterator.py  trainer.py  updater.py
examples/subtilin/: README.md  optimize.py  sampling.py  simulate.py  training.py
examples/swat/: README.md  attack_list.csv  dataset.py  evaluate.py  optimize.py  training.py
log_model/: __init__.py  logModel.py
rnns/: __init__.py  logLSTM.py
storages/: __init__.py  log_store.py
tests/: test_utils.py
tests/datasets/: test_normalize.py  test_utils.py
tests/models/: test_utils.py
tests/models/dnn/dataset/: test_create.py  test_extract.py
tests/models/dnn/model/: test_continuous.py  (+3 more)
(+10 files in other folders)
