[metadata]
name = deep_sentinel
version = attr: deep_sentinel.__version__
author = National institute of Advanced Industrial Science and Technology (AIST)
description = "Anomaly detector using deep neural network"
url = https://github.com/yoriyuki-aist/DeepSentinel
license_file = LICENSE.md
long_description = file: README.md
long_description_content_type = text/markdown
classifier =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
pythonrequire = >=3.5
packages = find:

install_requires =
    chainer>=5.3.0,<8.0.0
    numpy>=1.15.0
    scipy>=1.2
    pandas
    matplotlib
    tqdm

[options.extras_require]
cuda92 =
    cupy-cuda92>=5.3.0,<8.0.0
cuda100 =
    cupy-cuda100>=5.3.0,<8.0.0
cuda101 =
    cupy-cuda101>=5.3.0,<8.0.0

[options.packages.find]
exclude =
    tests
    tests.*
